# meteoroids

./: .gitignore  CMakeLists.txt
data/font/proggy/: LICENCE.txt
include/: bullet.h  darray.h  dllist.h  game.h  game_clock.h  game_input.h  gameinput.h  maths.h  menus.h  meteoroid.h  player.h  random.h  rectf.h  renderer.h  resources.h  shape.h  text.h  vec2f.h
src/: bullet.c  darray.c  dllist.c  game.c  game_clock.c  game_input.c  gameinput.c  main.c  maths.c  menus.c  meteoroid.c  player.c  radom.c  random.c  rectf.c  renderer.c  resources.c  shape.c  text.c  vec2f.c
